<resources>
    <string name="app_name">School TimeTable</string>
    <string name="select">Select Item</string>
    <string name="monday_button_string">Monday</string>
    <string name="tuesday_button_string">Tuesday</string>
    <string name="wednesday_button_string">Wednesday</string>
    <string name="thursday_button_string">Thursday</string>
    <string name="friday_button_string">Friday</string>
    <string name="subject_name_string">Subject name</string>
    <string name="class_start_time_string">Class start time</string>
    <string name="class_end_time_string">Class end time</string>
    <string name="classroom_name_string">Classroom name</string>
    <string name="teacher_name_string">Teacher name</string>
    <string name="add_subject_button_string">ADD SUBJECT</string>
    <string name="back_button_string">BACK</string>
    <string name="teacher_display_string">teacher:</string>
    <string name="classroom_display_string">classroom:</string>
    <string name="time_display_string">time:</string>
    <string name="homework_pick_string">Homework</string>
    <string name="presentation_pick_string">Presentation</string>
    <string name="test_pick_string">Test</string>
    <string name="oral_exam_pick_string">Oral exam</string>
    <string name="other_pick_string">Other</string>
    <string name="add_task_button_string">ADD TASK</string>
    <string name="splash_school_string">School</string>
    <string name="splash_timetable_string">TimeTable</string>
    <string name="tasks_display_string">Tasks</string>
    <string name="info_string">info</string>
    <string name="tasks_drawer_string">Tasks</string>
    <string name="photo_string">Photo</string>
    <string name="reset_string">Reset</string>
    <string name="select_task_string">Select task</string>
    <string name="add_task_string">Add task</string>
    <string name="notification1">It looks like it\'s just 12H left to finish your work!</string>
    <string name="notification2">Click here and check out.</string>
    <string name="nottitle">school timetable</string>
    <string name="task_saved">Task saved</string>
    <string name="enter_task">Please enter task!</string>
    <string name="enter_subject">Please enter subject!</string>
    <string name="enter_correct_time">Enter the correct time!</string>
    <string name="dark_mode">Dark mode:</string>
</resources>