<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroud_draw"
    tools:context=".activities.AddSubjectActivity">

    <include
        layout="@layout/toolbar"
        android:id="@+id/app_bar"/>

    <TextView
        android:id="@+id/titleView1"
        android:text="Add subject"
        android:fontFamily="@font/concave_tuscan_beveled"
        android:textSize="40sp"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/app_bar"
        app:layout_constraintEnd_toEndOf="@id/app_bar"
        app:layout_constraintStart_toStartOf="@id/app_bar"
        app:layout_constraintTop_toTopOf="@id/app_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Subject Name Input -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/subject_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="45dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/subject_name_text"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:background="@drawable/input_layout_shape"
                    android:hint="@string/subject_name_string"
                    android:textColorHint="@color/hintText"
                    tools:ignore="TouchTargetSizeCheck"
                    android:maxLength="22"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Flexible TimePicker Section -->
            <com.google.android.flexbox.FlexboxLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                app:alignItems="center"
                app:flexWrap="wrap"
                app:justifyContent="center">

                <!-- Start Time Picker -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TimePicker
                        android:id="@+id/datePickerStart"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:theme="@style/timePickerWhite"
                        android:timePickerMode="spinner" />

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/class_start_time_string"
                        android:textColor="@color/white" />
                </LinearLayout>

                <!-- End Time Picker -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TimePicker
                        android:id="@+id/datePickerEnd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:theme="@style/timePickerWhite"
                        android:timePickerMode="spinner" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/class_end_time_string"
                        android:textColor="@color/white" />
                </LinearLayout>
            </com.google.android.flexbox.FlexboxLayout>


            <!-- Classroom Name Input -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/classroom_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/classroom_name_text"
                    android:layout_width="match_parent"
                    android:layout_height="59dp"
                    android:background="@drawable/input_layout_shape"
                    android:hint="@string/classroom_name_string"
                    tools:ignore="TouchTargetSizeCheck"
                    android:maxLength="8"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Teacher Name Input -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/teacher_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="70dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/teacher_name_text"
                    android:layout_width="match_parent"
                    android:layout_height="59dp"
                    android:background="@drawable/input_layout_shape"
                    android:hint="@string/teacher_name_string"
                    android:maxLength="17"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.flexbox.FlexboxLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                app:alignItems="center"
                app:flexWrap="wrap"
                app:justifyContent="space_evenly">

                <!-- Add Subject Button -->
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/add_subject_btn"
                    android:layout_width="150dp"
                    android:layout_height="55dp"
                    android:background="@drawable/button_background"
                    android:text="@string/add_subject_button_string"
                    android:textColor="@color/white" />

                <!-- Back Button -->
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/back_button"
                    android:layout_width="150dp"
                    android:layout_height="55dp"
                    android:background="@drawable/button_background2"
                    android:text="@string/back_button_string"
                    android:textColor="@color/white" />
            </com.google.android.flexbox.FlexboxLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
