<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <!-- Main Content -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/backgroud_draw">

        <include
            android:id="@+id/app_bar"
            layout="@layout/toolbar"/>

        <TextView
            android:id="@+id/titleView1"
            android:text="School timetable"
            android:fontFamily="@font/concave_tuscan_beveled"
            android:textSize="40sp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/app_bar"
            app:layout_constraintEnd_toEndOf="@id/app_bar"
            app:layout_constraintStart_toStartOf="@id/app_bar"
            app:layout_constraintTop_toTopOf="@id/app_bar" />

        <!-- HorizontalScrollView -->
        <HorizontalScrollView
            android:id="@+id/horizontalScrollView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:fillViewport="true"
            app:layout_constraintTop_toBottomOf="@id/app_bar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <!-- Buttons -->
                <Button
                    android:id="@+id/monday"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="8dp"
                    android:backgroundTint="@color/lightGreen"
                    android:text="@string/monday_button_string"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/tuesday"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="8dp"
                    android:backgroundTint="@color/lightPurple"
                    android:text="@string/tuesday_button_string"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/wednesday"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="8dp"
                    android:backgroundTint="@color/pink"
                    android:text="@string/wednesday_button_string"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/thursday"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="8dp"
                    android:backgroundTint="@color/orange"
                    android:text="@string/thursday_button_string"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/friday"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="8dp"
                    android:backgroundTint="@color/purple_200"
                    android:text="@string/friday_button_string"
                    android:textColor="@color/white" />
            </LinearLayout>
        </HorizontalScrollView>

        <!-- RecyclerView -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/MainRecView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/horizontalScrollView"
            app:layout_constraintBottom_toTopOf="@id/adView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/add_subject_img"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/corner_button_design"
            android:elevation="4dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_add_cross"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.956"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.009" />

        <ImageView
            android:id="@+id/manu_img"
            android:layout_width="36dp"
            android:layout_height="31dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_dehaze" />

        <!-- AdView -->
        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:adSize="BANNER"
            app:adUnitId="ca-app-pub-3940256099942544/6300978111"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/MainRecView"
            android:layout_marginBottom="30dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Navigation View -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navView"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/background_drawer"
        app:menu="@menu/drawer_menu" />
</androidx.drawerlayout.widget.DrawerLayout>
